Seperate header with top and bottom Add 2 new files with top and bottom header Fix css, add z-index to div container

--- a/assets/scss/map.scss
+++ b/assets/scss/map.scss
@@ -2,6 +2,7 @@
   background-color: white;
   //height: 400px;
   flex: 1;
+  z-index: 1;
 
   &.foo {
     background-color: blue;
